@startuml

title __LAB3UP's Class Diagram__\n

  namespace com.company {
    class com.company.Cakes {
    }
  }
  

  namespace com.company {
    class com.company.Eclock {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Mechanic {
    }
  }
  

  namespace com.company {
    abstract class com.company.Tovar {
    }
  }
  

  namespace com.company {
    class com.company.Working {
    }
  }
  

  com.company.Cakes -up-|> com.company.Tovar
  com.company.Eclock -up-|> com.company.Tovar
  com.company.Main -up-|> com.company.Mechanic
  com.company.Mechanic -up-|> com.company.Working


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
